--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -25,6 +25,13 @@ body {
 font-size: 16px;
 color: aquamarine;
 }
+/*Footer*/
+
+.footer--copyright {
+    font-size: 21px;
+    color: grey;
+    text-align:right;
+}
 
 
 
